--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@react-icons/all-files": "^4.1.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
