--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.9.4"
   }
 }
