--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^2.0.16",
     "@heroicons/vue": "^2.0.16",
+    "@mui/material": "^5.11.12",
     "@react-icons/all-files": "^4.1.0",
+    "firebase": "^9.17.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
+    "recoil": "^0.7.7",
+    "tailwind": "^4.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -20,6 +28,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4",
     "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.9.4"
